--- a/fun.html
+++ b/fun.html
@@ -17,6 +17,6 @@
 
     <div id="score"><div>
     
-    <script src="fun.js" type="module"></script>
+    <script src="fun.js"></script>
   </body>
 </html>
