ordered list AND unordered list together for fun

--- a/required.html
+++ b/required.html
@@ -33,9 +33,14 @@
       <p>
         welcome to my awesome website!!1
       </p>
-      <ul>
+      <ul style="margin-bottom:0;">
         <li><p</li>
         <li><a href="#MYDOG">,my dog</a></li>
+      </ul>
+      <ol style="margin-top:0;margin-bottom:0;">
+        <li><a href="#BABY">DANCING BABY</a></li>
+      </ol>
+      <ul style="margin-top:0;">
         <li><a href="#MEMES">funny pictures!</a></li>
       </ul>
       &lt;\ul&gt;
@@ -53,7 +58,7 @@
           </tr>
           <tr>
               <th>
-                  <h1>DANDCING BABY!!!!</h1>
+                  <h1 id="BABY">DANDCING BABY!!!!</h1>
               </th>
           </tr>
           <tr>
