add nested list

--- a/required.html
+++ b/required.html
@@ -41,7 +41,11 @@
         <li><a href="#BABY">DANCING BABY</a></li>
       </ol>
       <ul style="margin-top:0;">
-        <li><a href="#MEMES">funny pictures!</a></li>
+        <li> funny pictures!
+            <ul>
+                <li><a href="#MEMES">has science gone too far</a></li>
+            </ul>
+        </li>
       </ul>
       &lt;\ul&gt;
 
@@ -68,7 +72,7 @@
           </tr>
           <tr>
               <th>
-                  <h1 id="MEMES">memes!</h1>
+                  <h1 id="MEMES">funny pictures!!</h1>
               </th>
           </tr>
           <tr>
